<resources>
    <string name="app_name">Reef Angel Status</string>
    <string name="app_version">2.4.0</string>
    <string name="db_authority">info.curtbinder.reefangel.db</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menuMainRefresh">Refresh</string>
    <string name="menuMainSettings">Settings</string>
    <string name="menuMainAbout">About</string>
    <string name="menuMainCommands">Commands</string>
    <string name="menuMainMemory">Memory</string>
    <string name="menuMainHistory">History</string>
    <string name="menuMainErrors">Errors</string>
    <string name="menuMainNotifications">Notifications</string>
    <string name="menuDelete">Delete</string>
    <string name="menuConfigureChart">Configure</string>
    <string name="menuSaveChart">Save Graph</string>
    <string name="menuFixDates">Fix Dates</string>
    <string name="titleHistory">Parameters History</string>
    <string name="titleMemory">Internal Memory</string>
    <string name="titleCommands">Commands</string>
    <string name="titleAbout">About Reef Angel Status</string>
    <string name="titleLicense">License Information</string>
    <string name="titleMemoryTabs">Memory Pages</string>
    <string name="titleCommandTabs">Command Pages</string>
    <string name="titlePrefs">Status Settings</string>
    <string name="titleDateTime">Date / Time</string>
    <string name="titleSelectProfile">Select Profile</string>
    <string name="titleChangelog">Changelog</string>
    <string name="titleErrorlog">Error Log File</string>
    <string name="titleVortech">Vortech Config</string>
    <string name="titleDCPump">DC Pump Config</string>
    <string name="titleError">Errors History</string>
    <string name="titleNotifications">Notifications</string>
    <string name="titleCreateNotification">Create Notification</string>
    <string name="titleUpdateNotification">Update Notification</string>
    <string name="titleOverride">PWM Override</string>
    <string name="titleFlags">Flags</string>
    <string name="titleAlert">Alert Flags</string>
    <string name="titleStatus">Status Flags</string>
    <string name="titleSetupWizard">Setup Wizard</string>
    <string name="titleConfigureChart">Configure Chart</string>
    <string name="titleFixDates">Fixing Dates</string>
    <string name="titleConvertDatesPrompt">Proceed with Date Conversion</string>
    <string name="tabMemory1">User-Defined</string>
    <string name="tabMemory2">Built-In</string>
    <string name="tabCommand1">command_tab_1</string>
    <string name="tabCommand2">command_tab_2</string>
<string name="textAbout">Monitors the status of your Reef Angel Controller and displays the values.  You must have a wifi attachment installed on
your controller or have a ReefAngel UserID to use this app.</string>
    <string name="descriptionMemory">Select the memory location to update or enter a custom location.</string>
    <string name="descriptionModes">Feeding and Water Change buttons enter the appropriate modes. Press the Exit button to simulate a button press on the controller, which exits the modes.</string>
    <string name="descriptionWizardMainStep">Welcome\n\nLet\'s configure your setup.\n\nPress \'Next\' to get started.</string>
    <string name="descriptionWizardDeviceStep">How do you want to communicate?</string>
    <string name="descriptionWizardUsernameStep">Enter your Reef Angel Forum username.</string>
    <string name="descriptionWizardRADNSStep">Did you enable Dynamic DNS with Reef Angel?</string>
    <string name="descriptionWizardDNSStep">Do you use a domain name for your controller?</string>
    <string name="descriptionWizardIPStep">Do you connect to your controller directly via an IP address?</string>
    <string name="descriptionWizardAuthUsernameStep">Do you have Device Authentication enabled on your controller?</string>
    <string name="descriptionWizardAuthPasswordStep">Enter your Device Authentication password:</string>
    <string name="descriptionMode">Change the Mode</string>
    <string name="descriptionSpeed">Change the Speed</string>
    <string name="descriptionDuration">Change the Duration</string>
    <string name="descriptionThreshold">Change the Threshold</string>
    <string name="descriptionReefAngelLogo">Reef Angel Logo</string>
    <string name="descriptionNotificationChannel">User created notifications based on controller values</string>
    <string name="descriptionErrorChannel">Errors related to the app</string>
    <string name="errorAuthentication">Device Authentication Error, check your user/password settings.</string>
    <string name="errorConnection">Error connecting to device</string>
    <string name="buttonRefresh">Refresh</string>
    <string name="buttonOk">OK</string>
    <string name="buttonYes">Yes</string>
    <string name="buttonNo">No</string>
    <string name="buttonVersion">Get RA Version</string>
    <string name="buttonDateGet">Get Time</string>
    <string name="buttonDateSet">Set Current Time</string>
    <string name="buttonRead">Read Value</string>
    <string name="buttonWrite">Write Value</string>
    <string name="buttonFeeding">Feeding Mode</string>
    <string name="buttonWater">Water Change</string>
    <string name="buttonExitMode">Exit Mode</string>
    <string name="buttonAtoClear">Clear ATO</string>
    <string name="buttonOverheatClear">Clear Overheat</string>
    <string name="buttonGetControllerTime">Get Time</string>
    <string name="buttonSetCurrentTime">Set to match device</string>
    <string name="buttonChangeDate">Choose Date</string>
    <string name="buttonChangeTime">Choose Time</string>
    <string name="buttonSetCustomTime">Set Custom Time</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonUpdate">Update</string>
    <string name="buttonFinish">Finish</string>
    <string name="buttonAdd">Add</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonSave">Save</string>
    <string name="buttonClear">Clear</string>
    <string name="buttonSet">Set</string>
    <string name="buttonNext">Next</string>
    <string name="buttonPrevious">Previous</string>
    <string name="buttonExit">Exit</string>
    <string name="buttonClose">Close</string>
    <string name="radioByte">Byte</string>
    <string name="radioInt">Int</string>
    <string name="labelLastUpdated">Last Updated:</string>
    <string name="labelStatus">Status</string>
    <string name="labelController">Controller</string>
    <string name="labelTemp1">T1</string>
    <string name="labelTemp2">T2</string>
    <string name="labelTemp3">T3</string>
    <string name="labelPH">PH</string>
    <string name="labelDP">DP</string>
    <string name="labelAP">AP</string>
    <string name="labelDP2">DP 2</string>
    <string name="labelAP2">AP 2</string>
    <string name="labelSalinity">Salinity</string>
    <string name="labelORP">ORP</string>
    <string name="labelPHExp">PH Exp</string>
    <string name="labelWaterLevel">Water</string>
    <string name="labelHumidity">Humidity</string>
    <string name="labelPar">PAR</string>
    <string name="labelAtoLow">ATO Low</string>
    <string name="labelAtoHigh">ATO High</string>
    <string name="labelPort1">Port 1</string>
    <string name="labelPort2">Port 2</string>
    <string name="labelPort3">Port 3</string>
    <string name="labelPort4">Port 4</string>
    <string name="labelPort5">Port 5</string>
    <string name="labelPort6">Port 6</string>
    <string name="labelPort7">Port 7</string>
    <string name="labelPort8">Port 8</string>
    <string name="labelRelayBox">Relay Box</string>
    <string name="labelSeparator">:</string>
    <string name="labelFeedingMode">Feeding Mode</string>
    <string name="labelWaterMode">Water Change Mode</string>
    <string name="labelExitMode">Exit Mode</string>
    <string name="labelAtoClear">ATO Clear</string>
    <string name="labelOverheatClear">Overheat Clear</string>
    <string name="labelVersion">Installed Version:</string>
    <string name="labelMemoryLocation">Memory Location:</string>
    <string name="labelUserMemoryLocation">User-Defined Location:</string>
    <string name="labelLocation">Location:</string>
    <string name="labelValue">Value:</string>
    <string name="labelType">Type:</string>
    <string name="labelName">Name:</string>
    <string name="labelDateController">Controller</string>
    <string name="labelDateCustomController">Custom Controller Time</string>
    <string name="labelDateTime">Time:</string>
    <string name="labelDate">Date:</string>
    <string name="labelDimming">Dimming</string>
    <string name="labelRadion">Radion</string>
    <string name="labelWhite">White</string>
    <string name="labelRoyalBlue">Royal Blue</string>
    <string name="labelRed">Red</string>
    <string name="labelGreen">Green</string>
    <string name="labelBlue">Blue</string>
    <string name="labelIntensity">Intensity</string>
    <string name="labelVortech">Vortech</string>
    <string name="labelMode">Mode</string>
    <string name="labelSpeed">Speed</string>
    <string name="labelDuration">Duration</string>
    <string name="labelThreshold">Threshold</string>
    <string name="labelDCPump">DC Pump</string>
    <string name="labelAI">Aqua Illuminations</string>
    <string name="labelIO">I/O</string>
    <string name="labelON">ON</string>
    <string name="labelOFF">OFF</string>
    <string name="labelCustomVariables">Custom Variables</string>
    <string name="labelCustom">Custom</string>
    <string name="labelEnable">Enable</string>
    <string name="labelChannel">Channel</string>
    <string name="labelLightsOn">Lights On</string>
    <string name="labelLightsOff">Lights Off</string>
    <string name="labelReboot">Reboot</string>
    <string name="labelCalibratePH">Calibrate PH</string>
    <string name="labelCalibrateSalinity">Calibrate Salinity</string>
    <string name="labelCalibrateORP">Calibrate ORP</string>
    <string name="labelCalibratePHExp">Calibrate PH Exp</string>
    <string name="labelCalibrateWaterLevel">Calibrate Water Level</string>
    <string name="labelPwmOverride">PWM Override</string>
    <string name="labelParameter">Parameter:</string>
    <string name="labelCondition">Condition:</string>
    <string name="labelAtoTimeout">ATO Timeout</string>
    <string name="labelOverheatTimeout">Overheat Timeout</string>
    <string name="labelBusLock">Bus Lock</string>
    <string name="labelLeak">Leak</string>
    <string name="labelSCDimming">16 Ch Dimming</string>
    <string name="labelSummary">Summary</string>
    <string name="labelDownloadLabelsOnFinish">Download Labels on Finish</string>
    <string name="labelMissing">Missing</string>
    <string name="labelDisabledDueToPortal">Disabled due to Portal</string>
    <string name="prefPre10MemorySummary">Memory locations</string>
    <string name="prefPre10MemoryTitle">Pre v1.0 Locations </string>
    <string name="prefAutoUpdateModulesSummary">Based on the controller</string>
    <string name="prefAutoUpdateModulesTitle">Auto Update Modules</string>
    <string name="prefConnectionTimeoutTitle">Connection Timeout</string>
    <string name="prefConnectionTimeoutDefault">15000</string>
    <string name="prefReadTimeoutTitle">Read Timeout</string>
    <string name="prefReadTimeoutDefault">10000</string>
    <string name="prefAutoRefreshAfterUpdateTitle">Auto refresh after commands</string>
    <string name="prefAutoRefreshAfterUpdateSummary">Automatically refresh the status after issuing a command or pwm override</string>
    <string name="prefPre10MemoryKey">pre_10_memory_locations</string>
    <string name="prefAutoUpdateModulesKey">update_modules</string>
    <string name="prefConnectionTimeoutKey">connection_timeout</string>
    <string name="prefReadTimeoutKey">read_timeout</string>
    <string name="prefAutoRefreshAfterUpdateKey">auto_refresh_update</string>
</resources>