<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2013 Curt Binder
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/prefPre10MemoryKey"
            android:summary="@string/prefPre10MemorySummary"
            android:title="@string/prefPre10MemoryTitle" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefAutoUpdateModulesKey"
            android:summary="@string/prefAutoUpdateModulesSummary"
            android:title="@string/prefAutoUpdateModulesTitle" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefAutoRefreshAfterUpdateKey"
            android:summary="@string/prefAutoRefreshAfterUpdateSummary"
            android:title="@string/prefAutoRefreshAfterUpdateTitle" />
        <ListPreference
            android:defaultValue="@string/prefConnectionTimeoutDefault"
            android:entries="@array/networkTimeout"
            android:entryValues="@array/networkTimeoutValues"
            android:key="@string/prefConnectionTimeoutKey"
            android:title="@string/prefConnectionTimeoutTitle" />
        <ListPreference
            android:defaultValue="@string/prefReadTimeoutDefault"
            android:entries="@array/networkTimeout"
            android:entryValues="@array/networkTimeoutValues"
            android:key="@string/prefReadTimeoutKey"
            android:title="@string/prefReadTimeoutTitle" />
        <!--<PreferenceScreen-->
            <!--android:key="@string/prefResetAllPrefsKey"-->
            <!--android:summary="@string/prefResetSummary"-->
            <!--android:title="@string/prefResetAllPrefsTitle" />-->

</PreferenceScreen>