<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Curt Binder
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelDateController"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/timeTextControllerTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_controllertime"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textIsSelectable="false"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:gravity="center"/>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin">
        <Button
            android:id="@+id/timeButtonGetControllerTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonGetControllerTime"
            android:layout_marginRight="@dimen/row_horizontal_padding"
            android:layout_marginEnd="@dimen/row_horizontal_padding"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/timeButtonSetCurrentTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSetCurrentTime"
            android:layout_weight="1"/>
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/labelDateCustomController"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/labelDateTime" />

            <TextView
                android:id="@+id/timeTextCustomTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textIsSelectable="false"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
             >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/labelDate" />

            <TextView
                android:id="@+id/timeTextCustomDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textIsSelectable="false"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/row_vertical_padding"
            >

            <Button
                android:id="@+id/timeButtonChangeTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/row_horizontal_padding"
                android:layout_marginEnd="@dimen/row_horizontal_padding"
                android:text="@string/buttonChangeTime" />

            <Button
                android:id="@+id/timeButtonChangeDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonChangeDate" />
        </TableRow>

        <Button
            android:id="@+id/timeButtonSetCustomTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSetCustomTime" />

        <TextView
            android:id="@+id/tvDisabled"
            android:text="@string/labelDisabledDueToPortal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin" />
    </TableLayout>

</ScrollView>