<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2019 Curt Binder
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:stretchColumns="1">

        <!-- Convert to a ROW, have label first, then 3 buttons at the end
            +, pencil, -/trash can  (add, edit, delete respectively)
         -->

        <TextView
            android:text="@string/labelUserMemoryLocation"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            />
        <TableRow>
            <TextView android:text="" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end"
                >

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add" />

                <Button
                    android:id="@+id/buttonEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Edit" />
                <Button
                    android:id="@+id/buttonDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delete" />
            </LinearLayout>
        </TableRow>

        <Spinner android:id="@+id/spinMemoryLocation" />

        <!-- Value edit box -->
        <TableRow android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/labelValue"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/valueText"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceMedium">

                <requestFocus />
            </EditText>
        </TableRow>
        <!-- Read & Write buttons -->

        <TableRow>

            <TextView android:text="" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonRead"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buttonRead" />

                <Button
                    android:id="@+id/buttonWrite"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buttonWrite" />
            </LinearLayout>

        </TableRow>

        <TextView
            android:id="@+id/tvDisabled"
            android:text="@string/labelDisabledDueToPortal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin" />
    </TableLayout>

</ScrollView>